--- a/levels/.temple4D-boss.txt.1
+++ b/levels/.temple4D-boss.txt.1
@@ -1,98 +1,116 @@
-loadingbg		data/sprites/loading/loading_Shiryu.png 1 -51 405 460 999 999 0
+#-------- Level Layers (Ordre: Calque de fond en Haut, Calque de Devant en bas)-----------------
 
-music           data/music/cancer.ogg
-
-panel       data/bgs/temple4D-boss/temple4D_panel.png 
 background     data/bgs/temple4D-boss/background.png        1 1 0 0 0 0 1 1 1 0
-bglayer  	data/bgs/temple4D-boss/clouds_back.png		 0.9 0 0 0 0 0 -1 -1 1 1 0 0 0 0 1.1
+bglayer  	data/bgs/temple4D-boss/clouds_back.png		 0.7 0 0 0 0 0 -1 -1 1 1 1 4 15 0.5 1
 bglayer     data/bgs/temple4D-boss/temple4D-mountainsB.png   	0.5 1 0 0 0 0 1 1 1 0
 bglayer  	data/bgs/temple4D-boss/clouds-front.png		 0.3 0 0 0 0 0 -1 -1 1 1 0 0 0 0 1.1
 bglayer     data/bgs/temple4D-boss/temple4D-mountainsA.png        0.05 1 0 0 0 0 1 1 1 0
-bgspeed 1 0
+panel       data/bgs/temple4D-boss/temple4D_panel.png 
 
-order       a
-direction   both
-settime     99
+#-------- Level options ------------------------------------------------------------------------
 
-cameratype  0
-light        256 -44
-at        0
-shadowalpha 6
-shadowopacity 0
-at          0
+loadingbg		data/sprites/loading/loading_Shiryu.png 1 -51 405 460 999 999 0 # Ecran et barre de loading
+music           data/music/cancer.ogg        # Musique du niveau
+bgspeed 1 0                                  # Vitesse de deplacement du background / Direction gauche
+order       a                                # ordre des panels
+direction   both                             # Direction du scrolling
+settime     99                               # Temps pour finir le niveau
+noreset 1                                    # Reset de l horloge apres timeout
+cameratype  0                                # La caméra bouge horizontalement
+light        256 -44                         # Direction de l ombre x, y
+at
+shadowalpha 6                                # Alpha de l ombre
+at
+shadowopacity 200                            # Opacité de l ombre
+at
 
-
-#-------- Players spawn position -----------------------------------------------
+#-------- Players spawn position ------------------------------------------------------------------
 
 spawn1 50 180 0 # position du joueur1 (x, z, Y)
 spawn2 80 160 0 # position du joueur2 (x, z, Y)
 spawn3 90 220 0 # position du joueur3 (x, z, Y)
 spawn4 110 190 0 # position du joueur4 (x, z, Y)
 
-#-- HUD ------------------------------------------------------------------------
+#-- HUD ----------------------------------------------------------------------------------------
 
 spawn       horloge-segment
-coords      368 89
-at          0
+coords 368 89
+at 0
 
 spawn       horloge-cancer
-coords      368 89
-at          0
+coords 368 89
+at 0
 
 spawn       horloge-flame
-coords      387 47
-at          0
+coords 387 47
+at 0
 
-#----------- Decoration ----------------------------------------------------
-
-spawn       temple4D-flame-big
-coords      115 350
-at          0
+#----------- Decoration --------------------------------------------------------------------------
 
 spawn       temple4D-flame-big
-coords      315 310
-at          0
+coords 163 282
+at 0
 
 spawn       temple4D-flame-big
-coords      615 350
-at          0
+coords 363 223
+at 0
 
 spawn       temple4D-flame-big
-coords      915 360
-at          0
+coords 640 273
+at 0
+
+spawn       temple4D-flame-big
+coords 835 278
+at 0
 
 spawn       temple4D-flame-small
-coords      55 295
-at          0
+coords -5 216
+at 0
 
 spawn       temple4D-flame-small
-coords      185 280
-at          0
+coords 153 225
+at 0
 
 spawn       temple4D-flame-small
-coords      315 250
-at          0
+coords 445 222
+at 0
 
 spawn       temple4D-flame-small
-coords      515 300
-at          0
+coords 714 222
+at 0
 
 spawn       temple4D-flame-small
-coords      1015 290
-at          0
+coords 1025 247
+at 0
 
-#-- BOSS -------------------------------------------------------------------
+#-- LEVEL ANIMATIONS -----------------------------------------------------------------------------
+
+
+spawn           temple4_faces01
+coords 0 0
+at 0
+spawn           temple4_faces02
+coords 0 0
+at 0
+spawn           temple4_faces03
+coords 0 0
+at 0
+
+
+#-- BOSS -------------------------------------------------------------------------------------
 
 spawn           deathmask
 boss 			1
-coords          650 410
-at              0
+coords 650 410
+at 0
 
 group			1 1
 at				0
 
 spawn           dialog_wait
-flip            1
 boss			1
-coords          1 1
-at              0
+coords 1 1
+flip 1
+at 0
+
+#---------------------------------------------------------------------------------------
