changed setlayer 1000 to small flames on temple 4D, no success...

--- a/levels/.temple4D-boss.txt.1
+++ b/levels/.temple4D-boss.txt.1
@@ -11,7 +11,7 @@ panel       data/bgs/temple4D-boss/temple4D_panel.png
 
 loadingbg		data/sprites/loading/loading_Shiryu.png 1 -51 405 460 999 999 0 # Ecran et barre de loading
 music           data/music/cancer.ogg        # Musique du niveau
-bgspeed 1 0                                  # Vitesse de deplacement du background / Direction gauche
+#bgspeed 1 0                                  # Vitesse de deplacement du background / Direction gauche
 order       a                                # ordre des panels
 direction   both                             # Direction du scrolling
 settime     99                               # Temps pour finir le niveau
@@ -48,52 +48,64 @@ at 0
 #----------- Decoration --------------------------------------------------------------------------
 
 spawn       temple4D-flame-big
-coords 163 282
+coords 160 311
+flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 363 223
+coords 360 246
+flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 640 273
+coords 634 327
+flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 835 278
+coords 909 293
+flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords -5 216
+coords 57 274
+flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 153 225
+coords 189 263
+flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 445 222
+coords 571 261
+flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 714 222
+coords 753 246
+flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 1025 247
+coords 1025 250
+flip 1
 at 0
 
 #-- LEVEL ANIMATIONS -----------------------------------------------------------------------------
 
 
 spawn           temple4_faces01
-coords 0 0
+coords -19 240
+flip 1
 at 0
 spawn           temple4_faces02
 coords 0 0
+flip 1
 at 0
 spawn           temple4_faces03
 coords 0 0
+flip 1
 at 0
 
 
