--- a/levels/.temple4D-boss.txt.1
+++ b/levels/.temple4D-boss.txt.1
@@ -2,9 +2,9 @@
 
 background     data/bgs/temple4D-boss/background.png        1 1 0 0 0 0 1 1 1 0
 bglayer  	data/bgs/temple4D-boss/clouds_back.png		 0.7 0 0 0 0 0 -1 -1 1 1 1 4 15 0.5 1
-bglayer     data/bgs/temple4D-boss/temple4D-mountainsB.png   	0.5 1 0 0 0 0 1 1 1 0
+fglayer     data/bgs/temple4D-boss/temple4D-mountainsB.png   	-500 0.5 1 0 0 0 0 1 1 1 0
 bglayer  	data/bgs/temple4D-boss/clouds-front.png		 0.3 0 0 0 0 0 -1 -1 1 1 0 0 0 0 1.1
-bglayer     data/bgs/temple4D-boss/temple4D-mountainsA.png        0.05 1 0 0 0 0 1 1 1 0
+fglayer     data/bgs/temple4D-boss/temple4D-mountainsA.png      -250 0.05 1 0 0 0 0 1 1 1 0
 panel       data/bgs/temple4D-boss/temple4D_panel.png 
 
 #-------- Level options ------------------------------------------------------------------------
@@ -48,47 +48,47 @@ at 0
 #----------- Decoration --------------------------------------------------------------------------
 
 spawn       temple4D-flame-big
-coords 160 311
+coords 160 350 39
 flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 360 246
+coords 360 350 104
 flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 634 327
+coords 634 350 23
 flip 1
 at 0
 
 spawn       temple4D-flame-big
-coords 909 293
+coords 909 350 57
 flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 57 274
+coords 57 350 76
 flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 189 263
+coords 217 350 75
 flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 571 261
+coords 558 350 83
 flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 753 246
+coords 808 350 66
 flip 1
 at 0
 
 spawn       temple4D-flame-small
-coords 1025 250
+coords 998 350 87
 flip 1
 at 0
 
@@ -124,5 +124,6 @@ boss			1
 coords 1 1
 flip 1
 at 0
+
 
 #---------------------------------------------------------------------------------------
