--- a/chars/shun/.00_shun.txt.1
+++ b/chars/shun/.00_shun.txt.1
@@ -1222,20 +1222,24 @@ anim freespecial5 # Uppercut (Haut + Bouton Special)
     jugglecost  2
     fastattack 1
     energycost  20 0 0
+    hitflash shun_impactD
     delay 10
     sound data/chars/shun/sounds/nebular_stream.wav
-    @cmd     spawnbind "shun_storm" "ANI_IDLE" 75 10 0 0 0
+    @cmd     spawnbind "shun_storm" "ANI_IDLE" 0 10 0 0 0
     delay 10
     offset    203 310
-	attack.effect.hit.flash.model shun_impactD
     frame    data/chars/shun/special1.png
     frame    data/chars/shun/special2.png
     frame    data/chars/shun/special3.png
-    offset    76 383
+    offset    70 184
     frame    data/chars/shun/uppercut1.png
     frame    data/chars/shun/uppercut2.png
+	 attack20 82 87 100 100 10 5 0 0 12 30
+    dropv    5 1.5
     frame    data/chars/shun/uppercut3.png
     frame    data/chars/shun/uppercut4.png
+    attack30 82 87 100 100 10 5 0 0 12 30
+    dropv    5 1.5
     frame    data/chars/shun/uppercut5.png
     frame    data/chars/shun/uppercut6.png
     frame    data/chars/shun/uppercut7.png
