fixed lot of pain animations for bronze saints (x axis shaking)

--- a/levels/.temple6C-road.txt.1
+++ b/levels/.temple6C-road.txt.1
@@ -36,8 +36,6 @@ settime 99
 
 order	a
 
-wall		497 809 -500 -500 3307 2837 324 400 # Mur 1 le long de la falaise
-wall		3824 800 0 0 693 693 308 306		# Mur 2 à droite du temple
 
 #-------- Players spawn position -----------------------------------------------
 
@@ -48,129 +46,147 @@ spawn4 110 190 0 # position du joueur4 (x, z, Y)
 
 ---------MURS------------------------------------------
 
-wall	320 306 197 236 693 628 99 306
-wall	956 369 -103 0 1019 935 99 306
-wall 1907 345 84 0 1019 1063 99 306
-wall 2945 322 84 0 2270 329 99 306
 
 ---------HUD-----------------------------------------------
 
 spawn       horloge-segment
-coords      368 89
-at          0
+coords 368 89
+at 0
 
 spawn       horloge-vierge
-coords      368 89
-at          0
+coords 368 89
+at 0
 
 spawn       horloge-flame
-coords      387 47
-at          0
+coords 387 47
+at 0
 
 spawn       temple6raindrop
-coords      0 0
-at          0
+coords 0 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      0 0
-at          0
+coords 0 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      0 0
-at          0
+coords 0 0
+flip 1
+at 0
 
 spawn       temple6raindrop4
-coords      0 0
-at          0
+coords 0 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      800 0
-at          0
+coords 800 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      800 0
-at          0
+coords 800 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      800 0
-at          0
+coords 800 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      1600 0
-at          0
+coords 1600 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      1600 0
-at          0
+coords 1600 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      1600 0
-at          0
+coords 1600 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      2400 0
-at          0
+coords 2400 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      2400 0
-at          0
+coords 2400 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      2400 0
-at          0
+coords 2400 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      3200 0
-at          0
+coords 3200 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      3200 0
-at          0
+coords 3200 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      3200 0
-at          0
+coords 3200 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      4000 0
-at          0
+coords 4000 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      4000 0
-at          0
+coords 4000 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      4000 0
-at          0
+coords 4000 0
+flip 1
+at 0
 
 spawn       temple6raindrop
-coords      4800 0
-at          0
+coords 4800 0
+flip 1
+at 0
 
 spawn       temple6raindrop2
-coords      4800 0
-at          0
+coords 4800 0
+flip 1
+at 0
 
 spawn       temple6raindrop3
-coords      4800 0
-at          0
+coords 4800 0
+flip 1
+at 0
 
 
 spawn soldier1
 alias SOLDIER
-coords	850 400
+coords 850 400
 item apple
 at 400
 
 spawn soldier3
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 400
 
 spawn soldier2
 alias SOLDIER
+coords -200 470
 item caixacc
-coords	-200 470
 at 400
 
 
@@ -180,18 +196,18 @@ at 400
 
 spawn soldier3
 alias SOLDIER
-coords	850 400
+coords 850 400
 at 1000
 
 spawn soldier2
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 1000
 
 spawn soldier3
 alias SOLDIER
+coords -200 470
 item boots
-coords	-200 470
 at 1000
 
 
@@ -200,18 +216,18 @@ at 1000
 
 spawn soldier1
 alias SOLDIER
-coords	850 400
+coords 850 400
 at 1500
 
 spawn soldier2
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 1500
 
 spawn soldier3
 alias SOLDIER
+coords -200 470
 item anelcd
-coords	-200 470
 at 1500
 
 
@@ -222,18 +238,18 @@ at 1500
 
 spawn soldier1-1
 alias SOLDIER
-coords	850 400
+coords 850 400
 at 2000
 
 spawn soldier2
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 2000
 
 spawn soldier1
 alias SOLDIER
+coords -200 470
 item 1up-gold
-coords	-200 470
 at 2000
 
 
@@ -243,18 +259,18 @@ at 2000
 
 spawn soldier3
 alias SOLDIER
-coords	850 400
+coords 850 400
 at 2400
 
 spawn soldier1-1
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 2400
 
 spawn soldier1-1
 alias SOLDIER
+coords -200 470
 item ourocd
-coords	-200 470
 at 2400
 
 
@@ -264,19 +280,19 @@ at 2400
 
 spawn soldier1-1
 alias SOLDIER
+coords 850 400
 item LIFE
-coords	850 400
 at 2800
 
 spawn soldier2
 alias SOLDIER
-coords	-200 410
+coords -200 410
 at 2800
 
 spawn soldier1-1
 alias SOLDIER
+coords -200 470
 item diamantecd
-coords	-200 470
 at 2800
 
 
@@ -285,20 +301,25 @@ at 2800
 
 spawn soldier3
 alias SOLDIER
+coords 602 428
 item laranjaff
-coords	850 400
 at 3800
 
 spawn soldier3
 alias SOLDIER
-coords	-200 410
+coords 157 433
 at 3800
 
 spawn soldier3
 alias SOLDIER
-coords	-200 470
+coords -200 470
 at 3800
 
 
 wait
 at 3800
+
+wall 88 218 -171 -130 693 995 99 306
+wall 1513 308 -727 -11 1019 796 99 306
+wall 2273 315 -243 0 1019 1317 99 306
+wall 4051 312 -419 -653 371 495 99 306
