--- a/chars/shun/.00_shun.txt.1
+++ b/chars/shun/.00_shun.txt.1
@@ -366,11 +366,13 @@ anim run # course
     @cmd     spawnbind "dash_dustB" "ANI_IDLE" 0 1 1 1 1 10
     frame    data/chars/shun/run6.png
     sound    data/chars/shun/sounds/run1.wav
+    @cmd runSplash
     frame    data/chars/shun/run1.png
     frame    data/chars/shun/run2.png
     frame    data/chars/shun/run3.png
     frame    data/chars/shun/run4.png
     sound    data/chars/shun/sounds/run2.wav
+    @cmd runSplash
     frame    data/chars/shun/run5.png
     frame    data/chars/shun/run6.png
 
